--- a/src/assets/component/_contact.scss
+++ b/src/assets/component/_contact.scss
@@ -4,19 +4,17 @@
         justify-content: space-between;
         align-items: center;
         overflow: hidden;
-        padding: 40px;
+        padding: 0px 40px;
         iframe{
             flex:1 1 45rem;
             width: 100%;
             object-fit: cover;
             height: 25rem;
-               // padding: 2rem;
+            padding: 20px;
         }
         form{
-            // margin-left: 20px;
             flex:1 1 45rem;
             padding: 5rem;
-            // text-align: center;
             h1{
                 text-align: center;
                 font-size: 36px;
