--- a/src/assets/component/_header.scss
+++ b/src/assets/component/_header.scss
@@ -18,7 +18,7 @@
         .menu{
             display: flex;
             li{
-                margin-right: 20px;
+                margin-right: 30px;
                 position: relative;
                 a{
                     color: $--color-white;
@@ -27,7 +27,7 @@
                     font-weight: bold;
                     font-size: 18px;
                     &:hover{
-                        color: blue;
+                        // color: blue;
                         &::before,&::after{
                             width: 50%;
                         }
